--- a/expanding-card/index.html
+++ b/expanding-card/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="container">
-        <div class="img1 img panel">sss</div>
+        <div class="img1 img panel"></div>
         <div class="img2 img panel"></div>
         <div class="img3 img panel"></div>
         <div class="img4 img panel"></div>
